--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.9"
 flask = "3.0.0"
 flask-sqlalchemy = "3.1.1"
+flask-login = "^0.6.3"
+flask-bcrypt = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.12.1"
